--- a/Homework/html_css_8/maket_abs/style.css
+++ b/Homework/html_css_8/maket_abs/style.css
@@ -3,3 +3,90 @@
     padding: 0;
     box-sizing: border-box;
 }
+.container {
+    margin: 30px;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+.header_text {
+    text-align: justify;
+}
+.images{
+    position: relative;
+    width: 500px;
+    height: 450px;
+    margin: 0 auto;
+}
+.biohazard{
+    position: absolute;
+    left: 35px;
+    top:40px;
+}
+.biohazard:hover {
+    z-index: 1;
+}
+.man-and-woman {
+    position: absolute;
+    left: 257px;
+    top: 15px;
+}
+
+.man-and-woman:hover {
+    z-index: 1;
+}
+
+.yin_and_yang {
+    position: absolute;
+    top: 210px;
+    left: 140px;
+}
+
+.yin_and_yang:hover {
+    z-index: 1;
+}
+
+.no_smoking {
+    position: absolute;
+    top: 70px;
+    left: 115px;
+}
+
+@media all and (max-width: 600px) {
+    .container {
+        margin: 5px;
+    }
+
+    .images {
+        width: 300px;
+        height: 400px;
+    }
+
+    .biohazard {
+        position: absolute;
+        left: 0;
+        top: 10px;
+    }
+
+    .man-and-woman {
+        position: absolute;
+        left: 107px;
+        top: 5px;
+    }
+
+    .no_smoking {
+        position: absolute;
+        top: 80px;
+        left: 25px;
+    }
+
+    .yin_and_yang {
+        position: absolute;
+        top: 220px;
+        left: 50px;
+    }
+}
