--- a/Exam_maket/css/style.css
+++ b/Exam_maket/css/style.css
@@ -152,7 +152,7 @@ button a {
 p.short{
 	font-size: 16px;
 	margin: 0 auto;
-	padding: 10px 10px 20px 10px;
+	padding: 10px 10px 20px 0;
 	line-height: 26px;
 }
 .event {
